--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="image" src="рисунок.svg" alt="SVG Image">
+    <img id="image" src="Рисунок.svg" alt="SVG Image">
   </div>
   <script src="script.js"></script>
 </body>
