--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-   <img id="image" src="https://drive.google.com/file/d/1R11FZPV0HRItjGqw312iQdrABwTwbdyc/view" alt="SVG Image">
+   <img id="image" src="https://drive.google.com/uc?export=view&id=1R11FZPV0HRItjGqw312iQdrABwTwbdyc" alt="SVG Image">
   </div>
   <script src="script.js"></script>
 </body>
