--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-   <img id="image" src="https://drive.google.com/uc?export=view&id=1R11FZPV0HRItjGqw312iQdrABwTwbdyc" alt="SVG Image">
+    <object id="image" type="image/svg+xml" data="https://drive.google.com/uc?export=view&id=1R11FZPV0HRItjGqw312iQdrABwTwbdyc" width="100%" height="100%">
+    </object>
   </div>
   <script src="script.js"></script>
 </body>
