--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <object id="image" type="image/svg+xml" data="https://drive.google.com/uc?export=view&id=1R11FZPV0HRItjGqw312iQdrABwTwbdyc" width="100%" height="100%">
+      Не вдалося завантажити SVG.
     </object>
   </div>
   <script src="script.js"></script>
