--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Масштабування і Переміщення SVG</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>SVG з Dropbox</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    .container {
+      width: 100%;
+      height: 100%;
+    }
+    object {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <object id="image" type="image/svg+xml" data="https://drive.google.com/uc?export=view&id=1R11FZPV0HRItjGqw312iQdrABwTwbdyc" width="100%" height="100%">
+    <object data="https://www.dropbox.com/scl/fi/rh85ud9op0s47pionjf9m/.svg?rlkey=jc8afc1sfevgqz065uuxieoqr&st=o8kkjm61&raw=1" type="image/svg+xml">
       Не вдалося завантажити SVG.
     </object>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
