--- a/index.html
+++ b/index.html
@@ -3,29 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SVG з Dropbox</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
-    .container {
-      width: 100%;
-      height: 100%;
-    }
-    object {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+  <title>Масштабування і Переміщення SVG</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <object data="https://www.dropbox.com/scl/fi/rh85ud9op0s47pionjf9m/.svg?rlkey=jc8afc1sfevgqz065uuxieoqr&st=o8kkjm61&raw=1" type="image/svg+xml">
-      Не вдалося завантажити SVG.
-    </object>
+    <!-- Вставляємо SVG з Dropbox -->
+    <img id="image" src="https://www.dropbox.com/scl/fi/rh85ud9op0s47pionjf9m/.svg?rlkey=jc8afc1sfevgqz065uuxieoqr&st=12ovhc52&raw=1" alt="SVG Image">
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
